--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -26,13 +26,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_margin_16dp"
             android:layout_marginTop="@dimen/default_margin_16dp"
-            android:layout_marginEnd="@dimen/default_margin_16dp"
-            tools:text="Osasco atropela Barueri"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_thumb" />
+            app:layout_constraintTop_toBottomOf="@+id/img_thumb"
+            tools:text="Osasco atropela Barueri" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/txt_body"
@@ -42,7 +40,8 @@
             android:layout_marginTop="@dimen/default_margin_16dp"
             android:layout_marginEnd="@dimen/default_margin_16dp"
             android:gravity="center"
-            tools:text="O time de Osasco conquistou o 16º título do Campeonato Paulista feminino de vôlei."
+            android:padding="4dp"
+            tools:text="A partir deste domingo nove times disputam o Campeonato Capixaba Feminino 2022, que garante vaga para a Série A-3 do Brasileirão da categoria."
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_tittle" />
@@ -65,23 +64,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/default_margin_16dp"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:contentDescription="@string/cd_favorite_icon"
+            android:focusable="true"
+            android:padding="1dp"
             app:layout_constraintBottom_toBottomOf="@+id/btn_link"
             app:layout_constraintEnd_toStartOf="@+id/img_share"
             app:layout_constraintTop_toTopOf="@+id/btn_link"
             app:layout_constraintVertical_bias="0.666"
             app:srcCompat="@drawable/ic_baseline_star_24"
-            android:contentDescription="@string/cd_favorite_icon" />
+            tools:ignore="TouchTargetSizeCheck" />
 
         <ImageView
             android:id="@+id/img_share"
             android:layout_width="24dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/default_margin_16dp"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:contentDescription="@string/cd_share_icon"
+            android:focusable="true"
+            android:padding="1dp"
             app:layout_constraintBottom_toBottomOf="@+id/img_favorite"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/img_favorite"
             app:srcCompat="@drawable/ic_share"
-            android:contentDescription="@string/cd_share_icon" />
+            tools:ignore="TouchTargetSizeCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
