--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/default_margin_8dp">
+    android:layout_margin="@dimen/default_margin_8dp"
+    app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,11 +15,11 @@
             android:id="@+id/img_thumb"
             android:layout_width="match_parent"
             android:layout_height="160dp"
+            android:contentDescription="@string/cd_news_img"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars"
-            android:contentDescription="@string/cd_news_img" />
+            tools:srcCompat="@tools:sample/avatars" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/txt_tittle"
@@ -26,8 +27,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_margin_16dp"
             android:layout_marginTop="@dimen/default_margin_16dp"
+            android:fontFamily="sans-serif"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/purple_6"
+            android:textSize="19sp"
             android:textStyle="bold"
+            app:fontFamily="@font/cabin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_thumb"
             tools:text="Osasco atropela Barueri" />
@@ -41,10 +46,10 @@
             android:layout_marginEnd="@dimen/default_margin_16dp"
             android:gravity="center"
             android:padding="4dp"
-            tools:text="A partir deste domingo nove times disputam o Campeonato Capixaba Feminino 2022, que garante vaga para a Série A-3 do Brasileirão da categoria."
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_tittle" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_tittle"
+            tools:text="A partir deste domingo nove times disputam o Campeonato Capixaba Feminino 2022, que garante vaga para a Série A-3 do Brasileirão da categoria." />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_link"
@@ -55,6 +60,8 @@
             android:layout_marginTop="@dimen/default_margin_16dp"
             android:layout_marginBottom="@dimen/default_margin_8dp"
             android:text="@string/txt_link"
+            android:textColor="@color/grey"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_body" />
@@ -69,6 +76,7 @@
             android:contentDescription="@string/cd_favorite_icon"
             android:focusable="true"
             android:padding="1dp"
+            app:tint="@color/icon"
             app:layout_constraintBottom_toBottomOf="@+id/btn_link"
             app:layout_constraintEnd_toStartOf="@+id/img_share"
             app:layout_constraintTop_toTopOf="@+id/btn_link"
@@ -86,6 +94,7 @@
             android:contentDescription="@string/cd_share_icon"
             android:focusable="true"
             android:padding="1dp"
+            app:tint="@color/icon"
             app:layout_constraintBottom_toBottomOf="@+id/img_favorite"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/img_favorite"
