--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -68,37 +68,37 @@
 
         <ImageView
             android:id="@+id/img_favorite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/default_margin_16dp"
+            android:layout_width="35dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
             android:background="?android:selectableItemBackgroundBorderless"
             android:clickable="true"
             android:contentDescription="@string/cd_favorite_icon"
             android:focusable="true"
             android:padding="1dp"
-            app:tint="@color/icon"
             app:layout_constraintBottom_toBottomOf="@+id/btn_link"
             app:layout_constraintEnd_toStartOf="@+id/img_share"
             app:layout_constraintTop_toTopOf="@+id/btn_link"
             app:layout_constraintVertical_bias="0.666"
-            app:srcCompat="@drawable/ic_baseline_star_24"
+            app:srcCompat="@drawable/ic_star_primary"
+            app:tint="@color/icon"
             tools:ignore="TouchTargetSizeCheck" />
 
         <ImageView
             android:id="@+id/img_share"
-            android:layout_width="24dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/default_margin_16dp"
+            android:layout_width="25dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="16dp"
             android:background="?android:selectableItemBackgroundBorderless"
             android:clickable="true"
             android:contentDescription="@string/cd_share_icon"
             android:focusable="true"
             android:padding="1dp"
-            app:tint="@color/icon"
             app:layout_constraintBottom_toBottomOf="@+id/img_favorite"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/img_favorite"
             app:srcCompat="@drawable/ic_share"
+            app:tint="@color/icon"
             tools:ignore="TouchTargetSizeCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
